tests/kubernetes/graph/resources/rollout_nested_resource.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout_name
spec:
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: rolloutName
          image: nginx
